# worker-ext-mcp

./: .gitignore  README.md  pyproject.toml
src/worker_ext_mcp/: __init__.py  config.py  extension.py  formatting.py  runtime.py
tests/: test_config.py  test_integration.py
tests/fixtures/: dummy_mcp_server.py
