[project]
name = "worker-ext-mcp"
version = "0.1.0"
description = "MCP extension for Worker"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "worker-core",
    "mcp>=1.12.4",
    "pydantic>=2.0",
]

[project.entry-points."worker.extensions"]
mcp = "worker_ext_mcp:McpExtension"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worker_ext_mcp"]
[tool.uv.sources]
worker-core = { path = "../worker/packages/worker-core", editable = true }
worker-ai = { path = "../worker/packages/worker-ai", editable = true }

[tool.uv.pip]
no-sources = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]
